# Cat-Holic-ai

./: Makefile  README.md  pyproject.toml
CAT-HOLIC-AI/: main.py  utils.py
CAT_HOLIC_AI/: main.py  prompts.py  schemas.py
moodi/: main.py
moodi/api/: story_check.py  story_gen.py  summation.py
moodi/models/: schemas.py
moodi/prompts/: story_check.py  story_gen.py  summation.py
moodi/utils/: config.py  utils.py
src/: main.py  utils.py
test/: test_api.py
tests/: test_api.py  test_story_check.py  test_story_gen.py  test_summation.py
train_summation/: dataset.ipynb
