[project]
name = "cat-holic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "luckyvickyricky",email = "kms39273@catholic.ac.kr"}
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

